# forex-signal-bot

./: README.md  env.example  gitignore  pyproject.toml  requirements.txt  sample_email.txt
.github/workflows/: main.yml
src/forex_signal_bot/: __init__.py  backtest.py  config.py  data_fetcher.py  dedupe_store.py  demo_data.py  email_service.py  indicators.py  logger_setup.py  main.py  models.py  risk.py  scheduler_service.py  signal_engine.py  utils.py
tests/: test_signal_engine.py
